--- a/tools/xsd2hs/xsd2hs.cabal
+++ b/tools/xsd2hs/xsd2hs.cabal
@@ -13,4 +13,4 @@ Cabal-version:       >=1.2
 Executable xsd2hs
   Main-is:           xsd2hs.hs
   Ghc-Options:       -Wall
-  Build-depends:     base, HaXml, pretty, polyparse, directory, filepath, HTTP
+  Build-depends:     base, HaXml, pretty, polyparse, directory, filepath, HTTP, containers, mtl
