--- a/avaya-aes.cabal
+++ b/avaya-aes.cabal
@@ -1,42 +1,69 @@
 Name:                avaya-aes
-Version:             0.0.1
+Version:             0.0.2
 Synopsis:
 Homepage:            https://github.com/f-me/avaya-aes
 License:             BSD3
 License-file:        LICENSE
-Author:              Tim
-Maintainer:          timofey@formalmethods.ru
+Author:              Max Taldykin, Timofey Cherganov
+Maintainer:          max@formalmethods.ru
 Category:            Network
 Build-type:          Simple
-Cabal-version:       >=1.6
-Extra-source-files:  README examples/Test.hs
+Cabal-version:       >=1.8
+Extra-source-files:  README
 
-Library
-  Hs-source-dirs: src
-  Exposed-modules:
-    Network.Avaya
-    Network.Avaya.Action
 
-  Other-modules:
-    Network.Avaya.Messages
-    Network.Avaya.Parse
-    Network.Avaya.Internal
+Executable avaya-test
+  Hs-source-dirs: test,src
+  Main-is: Test.hs
 
   ghc-options: -Wall -fno-warn-unused-do-bind
+
+  Extensions:
+    OverloadedStrings,
+    RecordWildCards,
+    NamedFieldPuns
 
   Build-depends:
     base                 == 4.*,
     binary               == 0.5.*,
     bytestring           == 0.9.*,
-    comonad-transformers == 2.1.1,
-    data-lens-template   >= 2.1 && < 2.2,
-    data-lens            >= 2.10 && < 2.11,
+    containers           >= 0.4.2,
     mtl                  == 2.0.*,
     network              == 2.3.*,
     stm                  == 2.3.*,
     text                 == 0.11.*,
-    xml-conduit          == 0.7.*,
-    xml-hamlet           == 0.3.*
+    xml-conduit          == 1.0.*,
+    xml-hamlet           == 0.4.*
+
+
+Library
+  Hs-source-dirs: src
+  Exposed-modules:
+    Avaya.MessageLoop
+    Avaya.Messages
+    Avaya.Messages.Request
+    Avaya.Messages.Response
+
+  Other-modules:
+
+  ghc-options: -Wall -fno-warn-unused-do-bind
+
+  Extensions:
+    OverloadedStrings,
+    RecordWildCards,
+    NamedFieldPuns
+
+  Build-depends:
+    base                 == 4.*,
+    binary               == 0.5.*,
+    bytestring           == 0.9.*,
+    containers           >= 0.4.2,
+    mtl                  == 2.0.*,
+    network              == 2.3.*,
+    stm                  == 2.3.*,
+    text                 == 0.11.*,
+    xml-conduit          == 1.0.*,
+    xml-hamlet           == 0.4.*
 
 source-repository head
   type:     git
