--- a/csta.cabal
+++ b/csta.cabal
@@ -69,6 +69,7 @@ Executable csta-ws
     text                 >= 0.11 && < 1.3,
     time                 >= 1.4 && < 1.6,
     transformers         >= 0.3 && < 0.5,
+    unix                 >= 2.7 && < 2.9,
     websockets           == 0.9.*,
     xml-conduit          >= 1.0 && < 1.3,
     xml-hamlet           == 0.4.*
