Split CSTA into Session/Agent modules
Remove old example, see csta-test instead now

--- a/csta.cabal
+++ b/csta.cabal
@@ -78,10 +78,11 @@ Library
   Hs-source-dirs: src
   Exposed-modules:
     CSTA
-    CSTA.Actions
-    CSTA.Types
 
   Other-modules:
+    CSTA.Agent
+    CSTA.Session
+    CSTA.Types
     CSTA.XML.Raw
     CSTA.XML.Request
     CSTA.XML.Response
