--- a/csta.cabal
+++ b/csta.cabal
@@ -99,6 +99,7 @@ Library
     aeson                == 0.8.*,
     binary               >= 0.5 && < 0.8,
     bytestring           >= 0.9.1 && < 0.11,
+    case-insensitive     == 1.2.*,
     containers           == 0.5.*,
     lens                 == 4.6.*,
     mtl                  >= 2.1 && < 2.3,
