Library-level logs for XML requests/responses/events

--- a/csta-ws/example.cfg
+++ b/csta-ws/example.cfg
@@ -1,6 +1,10 @@
 listen-port = 8333
+
 aes-addr = "192.168.20.5"
 aes-port = 4721
 aes-user = "avaya"
 aes-pass = "avayapassword"
 aes-switch = "S8300ADAC"
+
+# Log low-level CSTA library requests/responses
+log-library = true
