--- a/csta.cabal
+++ b/csta.cabal
@@ -101,6 +101,7 @@ Library
     bytestring           >= 0.9.1 && < 0.11,
     case-insensitive     == 1.2.*,
     containers           == 0.5.*,
+    hsyslog              >= 1.4 && < 2.1,
     lens                 == 4.6.*,
     mtl                  >= 2.1 && < 2.3,
     network              >= 2.3 && < 2.7,
