--- a/csta-ws/example.cfg
+++ b/csta-ws/example.cfg
@@ -7,4 +7,4 @@ aes-pass = "avayapassword"
 aes-switch = "S8300ADAC"
 
 # Log low-level CSTA library requests/responses
-log-library = true
+log-library = false
