--- a/csta.cabal
+++ b/csta.cabal
@@ -65,6 +65,7 @@ Executable csta-ws
     hsyslog              >= 1.4 && < 2.1,
     mtl                  >= 2.1 && < 2.3,
     network              >= 2.3 && < 2.7,
+    random               == 1.1.*,
     stm                  == 2.4.*,
     text                 >= 0.11 && < 1.3,
     time                 >= 1.4 && < 1.6,
