--- a/csta-ws/example.cfg
+++ b/csta-ws/example.cfg
@@ -2,9 +2,19 @@ listen-port = 8333
 
 aes-addr = "192.168.20.5"
 aes-port = 4721
-aes-user = "avaya"
-aes-pass = "avayapassword"
-aes-switch = "S8300ADAC"
+aes-use-tls = false
+
+# Path to a directory which contains the PEM encoded CA root
+# certificates used to verify server certificate. See
+# http://www.openssl.org/docs/ssl/SSL_CTX_load_verify_locations.html
+# for details of the file naming scheme
+#
+# aes-cacert-directory = "/etc/ssl/csta-certs/"
+
+api-user = "avaya"
+api-pass = "avayapassword"
+
+switch-name = "S8300ADAC"
 
 # Log low-level CSTA library requests/responses
 log-library = false
