--- a/csta.cabal
+++ b/csta.cabal
@@ -19,34 +19,6 @@ source-repository head
   type:     git
   location: git://github.com/f-me/csta.git
 
-Executable csta-test
-  Hs-source-dirs: csta-test
-  Main-is: Test.hs
-
-  ghc-options: -Wall -fno-warn-unused-do-bind
-
-  Extensions:
-    OverloadedStrings,
-    RecordWildCards,
-    NamedFieldPuns
-
-  Build-depends:
-    base                 == 4.*,
-    aeson                == 0.8.*,
-    binary               >= 0.5 && < 0.8,
-    bytestring           >= 0.9.1 && < 0.11,
-    containers           == 0.5.*,
-    csta,
-    mtl                  >= 2.1 && < 2.3,
-    network              >= 2.3 && < 2.7,
-    stm                  == 2.4.*,
-    text                 >= 0.11 && < 1.3,
-    time                 >= 1.4 && < 1.6,
-    transformers         >= 0.3 && < 0.5,
-    xml-conduit          >= 1.0 && < 1.3,
-    xml-hamlet           == 0.4.*
-
-
 Executable csta-ws
   Hs-source-dirs: csta-ws
   Main-is: Main.hs
@@ -106,10 +78,13 @@ Library
     bytestring           >= 0.9.1 && < 0.11,
     case-insensitive     == 1.2.*,
     containers           == 0.5.*,
+    HsOpenSSL            == 0.11.*,
     hsyslog              >= 1.4 && < 2.1,
+    io-streams           == 1.2.*,
     lens                 == 4.6.*,
     mtl                  >= 2.1 && < 2.3,
     network              >= 2.3 && < 2.7,
+    openssl-streams      == 1.2.*,
     stm                  == 2.4.*,
     time                 >= 1.4 && < 1.6,
     transformers         >= 0.3 && < 0.5,
