Web hook support
New "web-hook-handler-url" option for dmcc-ws

Publish agent events only if agent state has actually changed

Include AgentId in Web Hook events

--- a/dmcc-ws/example.cfg
+++ b/dmcc-ws/example.cfg
@@ -18,3 +18,5 @@ switch-name = "S8300ADAC"
 
 # Log low-level CSTA library requests/responses
 log-library = false
+
+# web-hook-handler-url = "http://localhost:8000/avaya/hook/"
