--- a/dmcc.cabal
+++ b/dmcc.cabal
@@ -39,6 +39,7 @@ Executable dmcc-ws
     containers           == 0.5.*,
     dmcc,
     hsyslog              >= 1.4 && < 2.1,
+    http-client          >= 0.4.7 && < 0.5,
     mtl                  >= 2.1 && < 2.3,
     network              >= 2.3 && < 2.7,
     random               == 1.1.*,
@@ -80,6 +81,7 @@ Library
     containers           == 0.5.*,
     HsOpenSSL            == 0.11.*,
     hsyslog              >= 1.4 && < 2.1,
+    http-client          >= 0.4 && < 0.5,
     io-streams           == 1.2.*,
     lens                 == 4.6.*,
     mtl                  >= 2.1 && < 2.3,
