--- a/dmcc.cabal
+++ b/dmcc.cabal
@@ -33,24 +33,16 @@ Executable dmcc-ws
   Build-depends:
     base                 == 4.*,
     aeson                == 0.8.*,
-    binary               >= 0.5 && < 0.8,
     bytestring           >= 0.9.1 && < 0.11,
     configurator         >= 0.2 && < 0.4,
     containers           == 0.5.*,
     dmcc,
     hsyslog              >= 1.4 && < 2.1,
-    http-client          >= 0.4.7 && < 0.5,
-    mtl                  >= 2.1 && < 2.3,
-    network              >= 2.3 && < 2.7,
     random               == 1.1.*,
     stm                  == 2.4.*,
     text                 >= 0.11 && < 1.3,
-    time                 >= 1.4 && < 1.6,
-    transformers         >= 0.3 && < 0.5,
     unix                 >= 2.7 && < 2.9,
-    websockets           == 0.9.*,
-    xml-conduit          >= 1.0 && < 1.3,
-    xml-hamlet           == 0.4.*
+    websockets           == 0.9.*
 
 Library
   Hs-source-dirs: src
@@ -83,7 +75,7 @@ Library
     hsyslog              >= 1.4 && < 2.1,
     http-client          >= 0.4 && < 0.5,
     io-streams           == 1.2.*,
-    lens                 == 4.6.*,
+    lens                 >= 4.6 && < 4.8,
     mtl                  >= 2.1 && < 2.3,
     network              >= 2.3 && < 2.7,
     openssl-streams      == 1.2.*,
