Delay agent release
More logs

--- a/dmcc-ws/example.cfg
+++ b/dmcc-ws/example.cfg
@@ -20,3 +20,8 @@ switch-name = "S8300ADAC"
 log-library = false
 
 # web-hook-handler-url = "http://localhost:8000/avaya/hook/"
+
+# How quickly to release unused agents (in seconds). If no WebSocket
+# clients use an agent for this interval, that agent is released (all
+# monitoring stopped and events are no longer tracked for that agent).
+agent-release-delay = 60
