--- a/dmcc.cabal
+++ b/dmcc.cabal
@@ -37,7 +37,7 @@ Executable dmcc-ws
     configurator         >= 0.2 && < 0.4,
     containers           == 0.5.*,
     dmcc,
-    hsyslog              >= 1.4 && < 2.1,
+    hsyslog              == 2.0.*,
     random               == 1.1.*,
     stm                  == 2.4.*,
     text                 >= 0.11 && < 1.3,
@@ -72,7 +72,7 @@ Library
     case-insensitive     == 1.2.*,
     containers           == 0.5.*,
     HsOpenSSL            == 0.11.*,
-    hsyslog              >= 1.4 && < 2.1,
+    hsyslog              == 2.0.*,
     http-client          >= 0.4 && < 0.5,
     io-streams           == 1.2.*,
     lens                 >= 4.6 && < 4.8,
