--- a/dmcc-ws/example.cfg
+++ b/dmcc-ws/example.cfg
@@ -1,8 +1,8 @@
 listen-port = 8333
 
-aes-addr = "192.168.20.5"
-aes-port = 4721
-aes-use-tls = false
+aes-addr = "192.168.20.14"
+aes-port = 4722
+aes-use-tls = true
 
 # Path to a directory which contains the PEM encoded CA root
 # certificates used to verify server certificate. See
@@ -14,7 +14,7 @@ aes-use-tls = false
 api-user = "avaya"
 api-pass = "avayapassword"
 
-switch-name = "S8300ADAC"
+switch-name = "ADACs8300"
 
 # Log low-level CSTA library requests/responses
 log-library = false
