Agent state polling
Send state changes to webhook

--- a/dmcc-ws/example.cfg
+++ b/dmcc-ws/example.cfg
@@ -25,3 +25,6 @@ log-library = false
 # clients use an agent for this interval, that agent is released (all
 # monitoring stopped and events are no longer tracked for that agent).
 agent-release-delay = 60
+
+# How often to poll every agent for state changes (in seconds).
+state-polling-delay = 1
