Tweak defaultSessionOptions, support options in dmcc-ws

--- a/dmcc-ws/example.cfg
+++ b/dmcc-ws/example.cfg
@@ -28,3 +28,12 @@ agent-release-delay = 60
 
 # How often to poll every agent for state changes (in seconds).
 state-polling-delay = 1
+
+# Session duration and session cleanup delay (in seconds). Keep alive
+# messages are sent every half of session duration interval.
+session-duration = 120
+
+connection-retry-attempts = 24
+
+# In seconds
+connection-retry-delay = 5
