Move maybeSyslog to a separate module

--- a/dmcc.cabal
+++ b/dmcc.cabal
@@ -54,6 +54,7 @@ Library
     DMCC.Agent
     DMCC.Session
     DMCC.Types
+    DMCC.Util
     DMCC.XML.Raw
     DMCC.XML.Request
     DMCC.XML.Response
