Drop old actions f-me/carma#2520
Support both timestamped and non-ts'd actions

Actions without a timestamp will always be executed

--- a/dmcc-ws/example.cfg
+++ b/dmcc-ws/example.cfg
@@ -37,3 +37,7 @@ connection-retry-attempts = 24
 
 # In seconds
 connection-retry-delay = 5
+
+# If an agent action has a timestamp older than current time by this
+# much time, the action is dropped.
+maximum-lag = 5
