--- a/dmcc.cabal
+++ b/dmcc.cabal
@@ -45,6 +45,9 @@ Executable dmcc-ws
     unix,
     websockets
 
+  Other-modules:
+    Paths_dmcc
+
 Library
   Hs-source-dirs: src
   Exposed-modules:
@@ -59,7 +62,6 @@ Library
     DMCC.XML.Raw
     DMCC.XML.Request
     DMCC.XML.Response
-    Paths_dmcc
 
   ghc-options: -Wall -fno-warn-unused-do-bind -threaded
 
