--- a/package.yaml
+++ b/package.yaml
@@ -29,6 +29,7 @@ dependencies:
   - classy-prelude
   - containers
   - monad-logger
+  - stm
   - stm-lifted
   - text
   - time
@@ -59,5 +60,6 @@ executables:
       - random
       - unix
       - websockets
+      - stm
     other-modules:
       - Paths_dmcc
