refactor: Use classy-prelude more

--- a/package.yaml
+++ b/package.yaml
@@ -19,6 +19,7 @@ default-extensions:
   - OverloadedStrings
   - RecordWildCards
   - NamedFieldPuns
+  - NoImplicitPrelude
 
 ghc-options:
   - -Wall
