--- a/package.yaml
+++ b/package.yaml
@@ -32,11 +32,14 @@ dependencies:
   - bytestring
   - classy-prelude
   - containers
+  - monad-control
   - monad-logger
+  - safe-exceptions
   - stm
-  - stm-lifted
   - text
   - time
+  - transformers-base
+  - unliftio
 
 library:
   source-dirs: src
