--- a/stack.yaml
+++ b/stack.yaml
@@ -1,3 +1,15 @@
-resolver: nightly-2018-05-10
+resolver: nightly-2018-10-01
 pvp-bounds: upper
-packages: ['.']
+extra-deps:
+- git: https://github.com/dzhus/mono-traversable
+  commit: "d89789c"
+  subdirs:
+    - classy-prelude
+    - mono-traversable-instances
+- dlist-instances-0.1.1.1
+- http-client-0.5.13.1
+- memory-0.14.18
+- mime-types-0.1.0.8
+- network-2.7.0.2
+- openssl-streams-1.2.1.3
+- xml-hamlet-0.5.0
