refactor: Remove plain connection support
TLS is mandatory now

It was never used anyways and `connectTo` is now deprecated in
network-2.8.0.0

--- a/dmcc-ws/example.cfg
+++ b/dmcc-ws/example.cfg
@@ -1,20 +1,19 @@
-listen-port = 8333
-
 aes-addr = "192.168.20.14"
 aes-port = 4722
-aes-use-tls = true
 
 # Path to a directory which contains the PEM encoded CA root
 # certificates used to verify server certificate. See
 # http://www.openssl.org/docs/ssl/SSL_CTX_load_verify_locations.html
 # for details of the file naming scheme
-#
-# aes-cacert-directory = "/etc/ssl/csta-certs/"
+aes-cacert-directory = "/etc/ssl/csta-certs/"
 
 api-user = "avaya"
 api-pass = "avayapassword"
 
 switch-name = "ADACs8300"
+
+# Expose WebSocket interface on this port
+listen-port = 8333
 
 # Log low-level CSTA library requests/responses
 log-library = false
