--- a/stack.yaml
+++ b/stack.yaml
@@ -1,14 +1,4 @@
-resolver: nightly-2018-10-03
+resolver: nightly-2018-11-02
 pvp-bounds: upper
 extra-deps:
-- git: https://github.com/dzhus/mono-traversable
-  commit: "d89789c"
-  subdirs:
-    - classy-prelude
-    - mono-traversable-instances
-- dlist-instances-0.1.1.1
-- http-client-0.5.13.1
-- memory-0.14.18
-- network-2.7.0.2
-- openssl-streams-1.2.1.3
-- xml-hamlet-0.5.0
+- openssl-streams-1.2.1.3@sha256:9e1fe9d805a890b1e2d8e6ea56985b1d5806699c91ec96c29d973a9fdb9b0480
