--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,6 +30,6 @@ jobs:
             ${{ runner.os }}-${{ matrix.stack_yaml }}-
             ${{ runner.os }}-
       - name: HLint
-        run: 'curl -sL https://raw.github.com/ndmitchell/hlint/master/misc/travis.sh | sh -s .'
+        run: 'curl -sSL https://raw.github.com/ndmitchell/hlint/master/misc/run.sh | sh -s .'
       - name: Build and run tests
         run: 'stack build --fast --no-terminal --stack-yaml=${{ matrix.stack_yaml }} --pedantic --haddock --no-haddock-deps --test --bench --no-run-benchmarks'
